<resources>
    <string name="app_name">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="digital_house_foods">Digital House Foods</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="digite_o_email">Digite o Email</string>
    <string name="digite_a_senha">Digite a senha</string>
    <string name="digite_o_nome">Digite o nome</string>
    <string name="as_senhas_devem_ser_iguais">As senhas devem ser iguais</string>
    <string name="deve_conter">Deve conter entre 4 e 12 caracteres</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="closed_at">closed at</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="description">Description</string>
    <string name="splashscreen_picture">SplashScreen picture</string>
    <string name="title_plate1">Salada com molho de gengibre</string>
    <string name="description_plate1">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="rest1_name">Tony Roma\'s</string>
    <string name="rest1_address">Av. Lavandisca, 717, Indianápolis, São Paulo</string>
    <string name="rest1_closed">Fecha às 22:00</string>
    <string name="rest2_name">Aoyama - Moema</string>
    <string name="rest2_address">Alameda dos Arapanés, 532 - Moema</string>
    <string name="rest2_closed">Fecha às 00:00</string>
    <string name="rest3_name">Outback - Moema</string>
    <string name="rest3_address">Av. Moacir, 187 - Moema, São Paulo</string>
    <string name="rest3_closed">Fecha às 00:00</string>
    <string name="rest4_name">Sí Señor!</string>
    <string name="rest4_address">Alameda Jauaperi, 626 - Moema</string>
    <string name="rest4_closed">Fecha às 01:00</string>
    <string name="title_plate2">Entradas variadas</string>
    <string name="title_plate3">Risoto de mozarela</string>
</resources>