<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/margin_Small"
    app:cardCornerRadius="@dimen/cornerRadius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_height_restaurantList">

            <ImageView
                android:id="@+id/img_tumbnail_restaurantCardBox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/restaurant_image"
                android:src="@mipmap/ic_tonny_tumbnail" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_title_restaurantCardBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_Medium"
            android:layout_marginEnd="@dimen/margin_Medium"
            android:layout_marginTop="@dimen/margin_Small"
            android:layout_marginBottom="@dimen/margin_Small"
            tool:text="@string/title"
            android:textColor="@color/textColor"
            android:textSize="@dimen/cardTitle"
            android:fontFamily="@font/roboto"/>

        <TextView
            android:id="@+id/txt_address_restaurantCardBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_Medium"
            android:layout_marginEnd="@dimen/margin_Medium"
            android:layout_marginBottom="@dimen/margin_Small"
            tool:text="@string/address"
            android:textColor="@color/colorGray"/>

        <TextView
            android:id="@+id/txt_hour_restaurantCardBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_Medium"
            android:layout_marginEnd="@dimen/margin_Medium"
            android:layout_marginBottom="@dimen/margin_Small"
            tool:text="@string/closed_at"
            android:textColor="@color/colorGray"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>