<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.view.LoginFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBar"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/margin_Medium">

        <ImageView
            android:id="@+id/img_back_signup"
            android:layout_width="@dimen/arrow_size"
            android:layout_height="@dimen/arrow_size"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:clickable="true"
            app:tint="@color/colorWhite"
            android:layout_marginEnd="@dimen/margin_Medium"
            android:focusable="true"
            android:contentDescription="@string/back_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/title"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_Medium">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_name_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:boxBackgroundColor="@color/colorWhite"
            android:layout_marginTop="@dimen/margin_Large"
            android:layout_marginBottom="@dimen/margin_Small"
            app:hintTextColor="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorPrimary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/colorWhite"
            android:layout_marginBottom="@dimen/margin_Small"
            app:hintTextColor="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/colorWhite"
            android:layout_marginBottom="@dimen/margin_Small"
            app:hintTextColor="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_repeatPassword_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            app:boxBackgroundColor="@color/colorWhite"
            android:layout_marginBottom="@dimen/margin_Large"
            app:hintTextColor="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <Button
                android:id="@+id/btn_register_signup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonHeight"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/register"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>